# firefly

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  run.py  run.sh  setup.cfg
app/: article.py  helper.py  request.py  script.py  valid_words.py
