[tool.poetry]
name = "firefly"
version = "1.0.0"
description = ""
authors = ["Rahul Agarwal <rahul.agarwal@savii.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
loguru = "0.7.2"
beautifulsoup4 = "4.12.3"
aiohttp = "3.10.10"


[tool.poetry.group.dev.dependencies]
flake8 = "7.1.1"
black = "24.10.0"
isort = "5.13.2"
mypy = "1.11.2"
autoflake = "2.3.1"
pre-commit = "4.0.1"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
follow_imports = "skip"
strict_optional = true

[tool.black]
line-length = 90

[tool.pylint.'MESSAGES CONTROL']
disable = """
    missing-function-docstring,
    missing-module-docstring,
    missing-class-docstring,
    redefined-outer-name,
    pointless-string-statement,
    no-self-argument,
    too-few-public-methods,
    too-many-arguments,
    too-many-branches,
    invalid-name,
    import-error,
    global-variable-not-assigned
    global-statement
"""
extension-pkg-whitelist='pydantic'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
